public/css/main.css
a {
    color: #666;
}

/** Header **/
#header h1 {
    margin: 0;
    background: #333;
    color: #eee;
    border-bottom: 1px solid rgba(255,255,255,.5);
    font-weight: lighter;
    font-size: 18px;
    padding: 10px 20px;
    text-shadow: 0 0 5px rgba(255,255,255,.5);
}

#header #options {
    position: absolute;
    right: 10px;
    top: 13px;
    font-size: 80%;
    color: #eee;
}

#header #options a {
    color: #eee;
}

/** Table **/

table {
    border-collapse: collapse;
    border: 1px solid #aaa;
    width: 100%;
}

th {
    background: #eee !important;
}

td, th {
    padding: 5px;
    text-align: left;
}

/** Forms **/

.event-list {
    list-style-type: none;
    padding-left: 0;
}

.event-entry {
    border-bottom: 1px solid lightblue;
}

.event-entry input {
    width: 90%;
}

.upload {
    display: inline;
}

/** Override Bootstrap **/
.alert {
    padding: 0px;
}

/* http://www.abeautifulsite.net/blog/2013/08/whipping-file-inputs-into-shape-with-bootstrap-3/ */
.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 999px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

